[gd_scene load_steps=2 format=3 uid="uid://bhjageail3wlq"]

[ext_resource type="Script" path="res://addons/godolibur/SceneHandling/EnemyController/EnemyController.gd" id="1_dmc21"]

[node name="EnemyController" type="Node"]
script = ExtResource("1_dmc21")

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
